<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">ImeetingClient</string>
	<string name="create_activity">创建活动</string>
	<string name="meeting_list">活动列表</string>
	<string name="start_time">时间：</string>
	<string name="end_time">结束时间：</string>
	<string name="destination">地点：</string>
	<string name="people_limit">人数上限：</string>
	<string name="desc_activity">活动描述：</string>
	<string name="hint">请输入活动内容...</string>
	<string name="send_message">发送手机短信邀请</string>
	<string name="send_mail">发送电子邮件邀请</string>
	<string name="set_time_title">设置时间</string>
	<string name="btn_ok">确定</string>
	<string name="btn_cancle">取消</string>
	<string name="position_too_lang">您输入的字符过长，字符上限为256个字符！</string>
	<string name="limit_num">人数上限为999，请重新输入！</string>
	<string name="wrong_num">您不能输入其他字符，请输入数字:0~999</string>
	<string name="operate">操作</string>
	<string name="delete">删除</string>
	<string name="copy">复制</string>
	<string name="share">分享</string>
	<string name="save">保存</string>
	<string name="login_label_username">帐号:</string>
	<string name="login_label_password">密码:</string>
	<string name="register_label_pass_insure">确认:</string>
	<string name="login_label_signin">登 录</string>
	<string name="login_label_find_back">找回</string>
	<string name="login_status_logging_in">登录中...</string>
	<string name="login_username_hint">Email或手机号</string>
	<string name="login_register_link">忘记密码？</string>
	<string name="register_label_top">用户注册</string>
	<string name="register_lable_pass_tip">6~16位</string>
	<string name="pass_tip">密码不能为空</string>
	<string name="pass_tip1">密码长度最低为6位</string>
	<string name="pass_tip2">确认密码不能为空</string>
	<string name="pass_tip3">两次输入的密码不一样，请重新输入</string>
	<string name="user_name_check">用户名不能为空</string>
	<string name="alert_message">当您接受安全协议后，方可注册</string>
	<string name="find_lable_message">输入手机号或邮箱来获取临时密码</string>
	<string name="find_lable_tip">手机号或邮箱</string>
	<string name="error_email">输入的邮件格式不正确</string>
	<string name="send_airenao_reciever">收件人:</string>
	<string name="send_airenao_title">发送邀请</string>
	<string name="send_airenao_add">增加</string>
	<string name="send_airenao_content">内容</string>
	<string name="send_airenao_with_tip">带报名提示</string>
	<string name="send_airenao_SMS_in_mine">使用自己的手机发送</string>
	<string name="send_airenao_retrieve">恢复默认设置</string>
	<string name="to_detail_activity">toDetailActivity</string>
	<string name="invited_number">邀请人</string>
	<string name="signed_number">已报名</string>
	<string name="unsiged_number">未报名</string>
	<string name="unjion">未参加</string>
	<string name="button_edit">编辑</string>
	<string name="btn_create_lable_SMS">发送手机短信邀请</string>
	<string name="btn_create_lable_email">发送电子邮件邀请</string>
	<string name="sendLableTitle">提示</string>
	<string name="sendlableNotice">关闭报名提示后，在发送给邀请人的短信/邮件中，将不包含报名链接，确定吗？</string>
	<string name="txtSendLable">
	某某邀请您参加：某年某月某日某时某地点举办的某某活动，敬请光临
	</string>
	<string name="createToList">返回活动列表，则创建活动页面中的数据将丢失，是否确定？</string>
	<string name="sendLableLink">
		<b>点击</b>http://www.google.com<b>进入报名链接</b>
	</string>
	<string name="showAllContactsJoinItem">Show all contacts</string>
	<string name="noContactsWithPhoneNumbers">No contacts with phone numbers.</string>
	<string name="fast_scroll_alphabet">\u0020ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
	<string name="listFoundAllContactsZero">Contact not found</string>
	<string name="listTotalAllContactsZero">No visible contacts</string>
	<string name="separatorJoinAggregateSuggestions">Suggested contacts</string>
	<string name="separatorJoinAggregateAll">All contacts</string>
	<string name="listTotalPhoneContactsZero">No visible contacts with phone numbers</string>
	<string name="favoritesFrquentSeparator">Frequently called</string>
	<plurals name="listFoundAllContacts">
		<item quantity="one">Found 1 contact</item>
		<item quantity="other">
			Found
			contacts
		</item>
	</plurals>


	<plurals name="listTotalAllContacts">
		<item quantity="one">Displaying 1 contact</item>
		<item quantity="other">
			Displaying

			contacts
		</item>
	</plurals>

	<plurals name="listTotalPhoneContacts">
		<item quantity="one">Displaying 1 contact with phone number</item>
		<item quantity="other">
			Displaying

			contacts with phone numbers
		</item>
	</plurals>

	<string name="type_short_home">H</string>
	<!-- Single-character overlay for mobile phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_mobile">M</string>
	<!-- Single-character overlay for work phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_work">W</string>
	<!-- Single-character overlay for pager phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_pager">P</string>
	<!-- Single-character overlay for other phone numbers when creating desktop 
		shortcuts -->
	<string name="type_short_other">O</string>

	<string name="deleteConfirmation_title">Delete</string>
	<string name="deleteConfirmation">This contact will be deleted.</string>

	<string name="menu_addStar">Add to favorites</string>

	<!-- Menu item used to remove a star from a contact, making the contact 
		no longer show up at the top of favorites -->
	<string name="menu_removeStar">Remove from favorites</string>

	<!-- Menu item used to edit a specific contact -->
	<string name="menu_editContact">Edit contact</string>
	<string name="menu_deleteContact">Delete contact</string>
	<string name="menu_call">Call contact</string>

	<!--
		Menu item used to send an SMS or MMS message to a specific phone
		number or a contacts default phone number
	-->
	<string name="menu_sendSMS">Text contact</string>
	
	<string name="noFavoritesHelpText">
		"You don't have any favorites.\n\nTo add a contact to your list of
		favorites:\n
		<li>
			Touch the
			<b>Contacts</b>
			tab\n
		</li>
		\n
		<li>Touch the contact you want to add to your favorites\n</li>
		\n
		<li>Touch the star next to the contact\'s name\n</li>
		"
	</string>
	
	<string name="noMatchingContacts">No matching contacts found.</string>

</resources> 
